feat: draw model

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2021"
 name="basic_triangle"
 path="examples/1.basic/1.triangle/main.rs"
 
+[[example]]
+name="basic_draw_model"
+path="examples/1.basic/3.draw_model/main.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
