--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,10 @@ path="examples/1.basic/5.pipeline/main.rs"
 name="basic_alpha"
 path="examples/1.basic/6.alpha/main.rs"
 
+[[example]]
+name="transform_2d"
+path="examples/2.transform/1.2d/main.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
