--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,9 @@ path="examples/2.transform/1.2d/main.rs"
 [[example]]
 name="transform_2d_matrix"
 path="examples/2.transform/2.2d-matrix/main.rs"
+[[example]]
+name="transform_3d_viewport"
+path="examples/2.transform/3.3d-viewport/main.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
