--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,9 @@ path="examples/2.transform/4.3d-rotation/main.rs"
 # 变换法向量
 name="transform_3d_normal_transform"
 path="examples/2.transform/4.3d-rotation/normal.rs"
+[[example]]
+name="transform_arbitrary_rotation"
+path="examples/2.transform/5.arbitrary-rotation/main.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
