--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,9 @@ path="examples/2.transform/5.arbitrary-rotation/main.rs"
 [[example]]
 name="transform_orthographic_projection"
 path="examples/2.transform/6.orthographic-projection/main.rs"
+[[example]]
+name="transform_viewing"
+path="examples/2.transform/7.viewing/main.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
