--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,9 @@ path="examples/2.transform/7.viewing/moving-camera.rs"
 [[example]]
 name="transform_perspective"
 path="examples/2.transform/8.perspective-projection/main.rs"
+[[example]]
+name="transform_perspective_fov"
+path="examples/2.transform/8.perspective-projection/fov.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
