--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,6 +71,9 @@ path="examples/2.transform/8.perspective-projection/fov.rs"
 [[example]]
 name="texture_diffuse"
 path="examples/3.texture/1.diffuse/main.rs"
+[[example]]
+name="texture_mosaic"
+path="examples/3.texture/2.bilinear/mosaic.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
