--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,11 +72,11 @@ path="examples/2.transform/8.perspective-projection/fov.rs"
 name="texture_diffuse"
 path="examples/3.texture/1.diffuse/main.rs"
 [[example]]
-name="texture_aliasing"
-path="examples/3.texture/1.diffuse/aliasing.rs"
-[[example]]
 name="texture_mosaic"
 path="examples/3.texture/2.bilinear/mosaic.rs"
+[[example]]
+name="texture_bilinear"
+path="examples/3.texture/2.bilinear/bilinear.rs"
 [[example]]
 name="texture_perspective"
 path="./examples/3.texture/3.perspective-correct-interpolation/demo1.rs"
