--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,6 +86,9 @@ path="./examples/3.texture/3.perspective-correct-interpolation/demo2.rs"
 [[example]]
 name="texture_perspective_correction"
 path="./examples/3.texture/3.perspective-correct-interpolation/demo3.rs"
+[[example]]
+name="texture_aliasing"
+path="./examples/3.texture/4.mipmap/aliaing.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
