--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,8 +93,8 @@ path="./examples/3.texture/4.mipmap/aliasing.rs"
 name="texture_mipmap"
 path="./examples/3.texture/4.mipmap/mipmap.rs"
 [[example]]
-name="texture_ripmap"
-path="./examples/3.texture/5.ripmap/ripmap.rs"
+name="texture_sat"
+path="./examples/3.texture/5.anisotropic/sat.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
